--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: fdom forecasting
 
 on:
   schedule:
-    - cron: '0 */2 * * *'
+    - cron: '43 */2 * * *'
 
 jobs:
   build:
@@ -25,3 +25,10 @@ jobs:
     - name: Test the python code
       run: |
         python app_ensemble_fdom.py
+    - name: commit files
+      run: |
+          git config --local user.email "damebet@gmail.com"
+          git config --local user.name "damebet"
+          git add --all
+          git commit -am "auto commit $(date)"
+          git push origin main
